--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -7,5 +7,6 @@
     <MduiNavMenuItem Href="fetchdata">Fetch data</MduiNavMenuItem>
     <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
     <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
+    <MduiNavMenuItem Href="panels">Panels</MduiNavMenuItem>
     <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
 </MduiNavMenu>
