add progress components

--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -8,5 +8,6 @@
     <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
     <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
     <MduiNavMenuItem Href="panels">Panels</MduiNavMenuItem>
+    <MduiNavMenuItem Href="progress">Progress</MduiNavMenuItem>
     <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
 </MduiNavMenu>
