add card component

--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -3,6 +3,7 @@
     <MduiNavMenuItem Href="ripples" Icon="">Ripples</MduiNavMenuItem>
     <MduiNavMenuItem Href="bars" Icon="">Bars</MduiNavMenuItem>
     <MduiNavMenuItem Href="buttons" Icon="">Buttons</MduiNavMenuItem>
+    <MduiNavMenuItem Href="cards" Icon="">Cards</MduiNavMenuItem>
     <MduiNavMenuItem Href="chips" Icon="">Chips</MduiNavMenuItem>
     <MduiNavMenuItem Href="counter" Icon="add">Counter</MduiNavMenuItem>
     <MduiNavMenuItem Href="fetchdata">Fetch data</MduiNavMenuItem>
