add tab component

--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -11,5 +11,6 @@
     <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
     <MduiNavMenuItem Href="panels">Panels</MduiNavMenuItem>
     <MduiNavMenuItem Href="progress">Progress</MduiNavMenuItem>
+    <MduiNavMenuItem Href="tabs">Tabs</MduiNavMenuItem>
     <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
 </MduiNavMenu>
