--- a/MduiBlazor.Shared/Pages/Bars.razor
+++ b/MduiBlazor.Shared/Pages/Bars.razor
@@ -1,16 +1,18 @@
 ﻿@page "/bars"
 
 <h2>Toolbar</h2>
-<MduiToolbar Color="@Colors.Theme.Primary">
-    <MduiIconButton Icon="menu" />
-    <MduiText Typo="@Typo.title">Title</MduiText>
-    <MduiToolbarSpace />
-    <MduiIconButton Icon="search" />
-    <MduiIconButton Icon="refresh" />
-    <MduiMenu Icon="more_vert" AlignEnd>
-        <MduiMenuItem>Help & feedback</MduiMenuItem>
-        <MduiMenuItem Disabled>Settings</MduiMenuItem>
-        <MduiDivider />
-        <MduiMenuItem>Sign out</MduiMenuItem>
-    </MduiMenu>
-</MduiToolbar>
+<div style="height:240px">
+    <MduiToolbar Color="@Colors.Theme.Primary">
+        <MduiIconButton Icon="menu" />
+        <MduiText Typo="@Typo.title">Title</MduiText>
+        <MduiToolbarSpace />
+        <MduiIconButton Icon="search" />
+        <MduiIconButton Icon="refresh" />
+        <MduiMenu Icon="more_vert" AlignEnd>
+            <MduiMenuItem>Help & feedback</MduiMenuItem>
+            <MduiMenuItem Disabled>Settings</MduiMenuItem>
+            <MduiDivider />
+            <MduiMenuItem>Sign out</MduiMenuItem>
+        </MduiMenu>
+    </MduiToolbar>
+</div>
