add snackbar component

--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -11,6 +11,7 @@
     <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
     <MduiNavMenuItem Href="panels">Panels</MduiNavMenuItem>
     <MduiNavMenuItem Href="progress">Progress</MduiNavMenuItem>
+    <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
     <MduiNavMenuItem Href="tabs">Tabs</MduiNavMenuItem>
     <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
 </MduiNavMenu>
