--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -6,6 +6,7 @@
     <MduiNavMenuItem Href="cards" Icon="">Cards</MduiNavMenuItem>
     <MduiNavMenuItem Href="chips" Icon="">Chips</MduiNavMenuItem>
     <MduiNavMenuItem Href="counter" Icon="add">Counter</MduiNavMenuItem>
+    <MduiNavMenuItem Href="dialogs" Icon="">Dialogs</MduiNavMenuItem>
     <MduiNavMenuItem Href="fetchdata">Fetch data</MduiNavMenuItem>
     <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
     <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
