--- a/MduiBlazor/Components/Snackbar/MduiSnackbarProvider.razor
+++ b/MduiBlazor/Components/Snackbar/MduiSnackbarProvider.razor
@@ -6,7 +6,7 @@
     <CascadingValue Value="@this" IsFixed>
     @foreach (var snackbar in SnackbarList.OrderBy(x => x.TimeStamp))
         {
-            <MduiSnackbar @key="snackbar" Options="@(snackbar.Options??GlobalOptions)" SnackbarId="@snackbar.Id">
+            <MduiSnackbar @key="snackbar" Options="@(snackbar.Options??Options)" SnackbarId="@snackbar.Id">
                 @snackbar.MessageContent
             </MduiSnackbar>
         }
