--- a/MduiBlazor/Components/Snackbar/MduiSnackbar.razor
+++ b/MduiBlazor/Components/Snackbar/MduiSnackbar.razor
@@ -4,9 +4,8 @@
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <div class="mdui-snackbar-text">@ChildContent</div>
-    @if (Options.ShowCloseButton)
+    @if (_options.ShowCloseButton)
     {
-        <MduiIconButton Class="mdui-snackbar-action" Icon="cancel" Color="@Options.CloseBtnColor"
-        OnClick="@CloseBtnClicked" />
+        <MduiIconButton Class="mdui-snackbar-action" Icon="cancel" Color="@_options.CloseBtnColor" OnClick="@Close" />
     }
 </div>
