--- a/MduiBlazor/Components/Dialog/MduiDialogProvider.razor
+++ b/MduiBlazor/Components/Dialog/MduiDialogProvider.razor
@@ -1,8 +1,10 @@
 ﻿@namespace MduiBlazor
 
-<CascadingValue Value="@this" IsFixed>
-    @foreach (var dialog in _dialogs)
-    {
-        @dialog.Instance
-    }
-</CascadingValue>
+<div class="mdui-dialog-provider">
+    <CascadingValue Value="@this" IsFixed>
+        @foreach (var dialog in _dialogs)
+        {
+            @dialog.Instance
+        }
+    </CascadingValue>
+</div>
