--- a/mdui/src/components/bottom_nav/index.less
+++ b/mdui/src/components/bottom_nav/index.less
@@ -4,8 +4,6 @@
  * =============================================================================
  */
 
-@import '../headroom/index';
-
 .mdui-bottom-nav {
   position: relative;
   display: flex;
@@ -20,6 +18,7 @@
       flex-grow: 1;
       content: ' ';
     }
+
     &::after {
       flex-grow: 1;
       content: ' ';
@@ -57,7 +56,7 @@
       opacity: 0.7;
     }
 
-    label {;
+    label {
       display: block;
       width: 100%;
       cursor: pointer;
@@ -65,7 +64,7 @@
       will-change: font-size;
     }
 
-    .mdui-icon + label {
+    .mdui-icon+label {
       margin-top: 6px;
     }
 
@@ -88,14 +87,17 @@
     min-width: 32px;
     padding-right: 0;
     padding-left: 0;
+
     @media (min-width: @screen-sm-min) {
       max-width: 156px;
     }
+
     .mdui-icon {
       padding-top: 16px;
       transition: padding-top .2s @animation-curve-default;
       will-change: padding-top;
     }
+
     label {
       transform: scale(0);
     }
@@ -103,9 +105,11 @@
     &.mdui-bottom-nav-active {
       padding-right: 18px;
       padding-left: 18px;
+
       .mdui-icon {
         padding-top: 0;
       }
+
       label {
         transform: scale(1);
       }
@@ -137,13 +141,14 @@
     @colorName: extract(@globalPrimaryColors, @counter-color);
     @color: 'color-@{colorName}-500';
 
-    .mdui-theme-primary-@{colorName} when not (@colorName = null) {
+    .mdui-theme-primary-@{colorName} when not (@colorName =null) {
       .mdui-bottom-nav a.mdui-bottom-nav-active {
         color: @@color;
       }
     }
 
   }
+
   .loop-primary-theme(length(@globalPrimaryColors));
 }
 
