add bottomnav component

--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -2,6 +2,7 @@
     <MduiNavMenuItem Href="" Icon="home" Match="NavLinkMatch.All">Home</MduiNavMenuItem>
     <MduiNavMenuItem Href="ripples" Icon="">Ripples</MduiNavMenuItem>
     <MduiNavMenuItem Href="bars" Icon="">Bars</MduiNavMenuItem>
+    <MduiNavMenuItem Href="bottomnav" Icon="">BottomNav</MduiNavMenuItem>
     <MduiNavMenuItem Href="buttons" Icon="">Buttons</MduiNavMenuItem>
     <MduiNavMenuItem Href="cards" Icon="">Cards</MduiNavMenuItem>
     <MduiNavMenuItem Href="chips" Icon="">Chips</MduiNavMenuItem>
