--- a/mdui/src/components/bottom_nav/index.less
+++ b/mdui/src/components/bottom_nav/index.less
@@ -115,18 +115,14 @@
       }
     }
   }
-}
 
-/* 固定到页面底部 */
-.mdui-bottom-nav-fixed {
-  .mdui-bottom-nav {
+  /* 固定到页面底部 */
+  &.mdui-bottom-nav-fixed {
     position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
   }
-
-  padding-bottom: 56px;
 }
 
 /**
