--- a/MduiBlazor/Components/BottomNav/MduiBottomNav.razor
+++ b/MduiBlazor/Components/BottomNav/MduiBottomNav.razor
@@ -1,7 +1,7 @@
 @namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <CascadingValue Value="@this" IsFixed>
         @ChildContent
     </CascadingValue>
