--- a/MduiBlazor/Components/Card/MduiCard.razor
+++ b/MduiBlazor/Components/Card/MduiCard.razor
@@ -1,7 +1,7 @@
 @namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @if (HeaderContent is not null)
     {
         @HeaderContent
