--- a/MduiBlazor/Components/Panel/MduiPanel.razor
+++ b/MduiBlazor/Components/Panel/MduiPanel.razor
@@ -1,6 +1,6 @@
 @namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @ChildContent
 </div>
