--- a/MduiBlazor/Components/Panel/MduiPanelItem.razor
+++ b/MduiBlazor/Components/Panel/MduiPanelItem.razor
@@ -1,7 +1,7 @@
 @namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <div class="mdui-panel-item-header" @onclick="@OnClickHeaderAsync">
         <div class="mdui-panel-item-title">@Title</div>
         @if (Summary?.Any() == true)
