--- a/MduiBlazor/Components/Progress/MduiProgress.razor
+++ b/MduiBlazor/Components/Progress/MduiProgress.razor
@@ -2,5 +2,5 @@
 @inherits MduiComponentBase
 
 <div class="mdui-progress">
-    <div class="@Classname" style="@Stylename"></div>
+    <div class="@Classname" style="@Stylename" @attributes="@AdditionalAttributes"></div>
 </div>
