--- a/MduiBlazor/Components/Progress/MduiSpinner.razor
+++ b/MduiBlazor/Components/Progress/MduiSpinner.razor
@@ -1,7 +1,7 @@
 @namespace MduiBlazor
 @inherits MduiComponentBase
 
-<div class="@Classname" style="@Style">
+<div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @if (Colorful)
     {
         @(new MarkupString(SpinnerLayer(1)))
