--- a/MduiBlazor/Components/Tab/MduiTabItem.razor
+++ b/MduiBlazor/Components/Tab/MduiTabItem.razor
@@ -4,7 +4,7 @@
 
 @if (_active)
 {
-    <div class="@Classname" style="@Style">
+    <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
         @ChildContent
     </div>
 }
