--- a/MduiBlazor/Components/Panel/MduiPanel.razor
+++ b/MduiBlazor/Components/Panel/MduiPanel.razor
@@ -2,5 +2,7 @@
 @inherits MduiComponentBase
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    @ChildContent
+    <CascadingValue Value="@this" IsFixed>
+        @ChildContent
+    </CascadingValue>
 </div>
