--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -14,6 +14,7 @@
     <MduiNavMenuItem Href="panels">Panels</MduiNavMenuItem>
     <MduiNavMenuItem Href="progress">Progress</MduiNavMenuItem>
     <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
+    <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
     <MduiNavMenuItem Href="tabs">Tabs</MduiNavMenuItem>
     <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
 </MduiNavMenu>
