add pagination component

--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -11,6 +11,7 @@
     <MduiNavMenuItem Href="fetchdata">Fetch data</MduiNavMenuItem>
     <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
     <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
+    <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
     <MduiNavMenuItem Href="panels">Panels</MduiNavMenuItem>
     <MduiNavMenuItem Href="progress">Progress</MduiNavMenuItem>
     <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
