--- a/mdui/src/components/ripple/index.less
+++ b/mdui/src/components/ripple/index.less
@@ -33,6 +33,10 @@
     opacity: 0.1;
     transition: 0s;
   }
+
+  &[disabled] {
+    pointer-events: none !important;
+  }
 }
 
 /* 有背景色的默认使用白色涟漪 */
