--- a/mdui/src/components/selection_control/radio.less
+++ b/mdui/src/components/selection_control/radio.less
@@ -56,10 +56,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 15px;
-    height: 15px;
+    width: 100%;
+    height: 100%;
     background-color: @color-default-a200;
-    border-radius: 15px;
+    border-radius: 50%;
     transform: scale(0);
     opacity: 0;
     transition: all .3s @animation-curve-default;
